  renamed into securityEngineId as it's semantically correct
- Oneliner UsmUserData() and CommunityData() classes now support clone()'ing
  to facilitate authentication data management in user applications.
- Oneliner transport target classes now support the getTransportInfo()
  method that returns network addresses used on protocol level.
- The config.addSocketTransport() helper renamed into config.addTransport()
  and improved by automatically instantiating compatible TransportDispatcher
  making it dispatcher-agnostic. As an additional bonus, application may not
  call registerTransportDispatcher() as it would be called by addTransport().
- The SnmpV3MessageProcessingModel.getPeerEngineInfo() method is implemented
  to communicate discovered peer SNMP engine information to SNMP apps what
  can be used for fine usmUserTable configuration.
- AsynNotificationOriginator.cfgCmdGen() does not take into account
  securityModel & securityLevel when reducing LCD access via addTrapUser().
  This improves LCD consistency on sparse add/del operatons but also
  does not let you to configure different securityModels per securityname
  at VACM though the cfgCmdGen() wrapper.
- MIB builder traceback formatting and reporting improved.
- SNMP Engine object now has a snmpEngineID attribute exposed.
- Fix to inet_ntop()/inet_pton() support on Windows at TRANSPORT-ADDRESS-MIB.
- Fix to usmUserSecurityName table column implementation -- automatic value
  generation from index value removed.
- Fix and significant logic rework of snmpCommunityTable to make it working
  in both Generator and Responder modes and better follow RFC2576 
  requirements on sequential entries lookup and selection. As a side effect,
  untagged snmpCommunityTable entries will *not* match tagged 
  snmpTargetAddrTable entries and vice versa.
- Fix to Twisted-based NotificationOriginator to make it serving INFORMs again.
- Fix to rfc2576.v1tov2() logic: errorStatus = noSuchName is now translated